@@ -1,15 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST emacs-common-gentoo-1.3.tar.gz 46819 RMD160 40c12dd355c3fd80ad65d45190c4f3c7f2134ad6 SHA1 ff743a4646d493dd14ed1e812d3adfd6323498e9 SHA256 c874088b1d9833432e1da9c3e3f79e7891cb3af41bcdecb02aa299d207c0218d
-EBUILD emacs-common-gentoo-1.3.ebuild 2904 RMD160 3d4a8cb6dab0d0492a5b056ea00eed16245448ba SHA1 dbfdfc60322f41e8ce30ed326ec307f3593c6c48 SHA256 3ce7693e8d32ff3b930c51a61d4260b7c4275989e8ded060c11cdbb91e67b262
-EBUILD emacs-common-gentoo-9999.ebuild 2973 RMD160 cbf70b4a6b4a0be3fbb228c23c771f201f36eb29 SHA1 e008a43220240332a9cbd43528db98e01e20dc70 SHA256 846a199a570cfec15ea989760f069c19ab2b26a6892f932966c647dff0d215a8
-MISC ChangeLog 2119 RMD160 927b693e73c027933df54eb7427f43978b15c57e SHA1 4fca4a39f3d27ab793d34f6dd22db2ac10a155bc SHA256 f394647eddc084b6b564f152f87db00a9028c6d38103b62c1d990d2b07bb3a6d
+EBUILD emacs-common-gentoo-9999.ebuild 3004 RMD160 107b232d76eda102c928043fc51c89a799838b1e SHA1 74067b029ef03c3c4cdcde442d2f61bd1bb8c226 SHA256 90fae14c8c717dee9e868fe7c597cb5d3625b33253343f61cb5e9b1cbfdc5297
+MISC ChangeLog 2292 RMD160 8cc22cfcd29932e315252cf323c766a71cd88d99 SHA1 21e93be44eee2902bd6247af5ceaf5d384b4a865 SHA256 eb19eca6930d2df112fa38d0b279032c3ccda1494bb6f8010740d1a451160c27
 MISC metadata.xml 235 RMD160 94ec7acf062c24ce7a5c9b98fff11c2a68baf269 SHA1 c948e0bb625876a97f14834fe5848367dda93628 SHA256 81f928a2ff996d91f098bc1d718adec61bbb6afa1f8e5f1b29f0931a73902ec1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7mMvcACgkQOeoy/oIi7uz8HACeJdw5yi8liLhpa0MR57F/NKiu
-O6wAn3eprkHuxd6SgdxkOWoNcTnREJpn
-=7F58
+iEYEARECAAYFAk7n0psACgkQOeoy/oIi7uxWJwCghe9M/2+wwQ1Z2w3FTt3IAJ7h
+bmQAnRxBZLBLBLKxfjON6wJdR1Cfvq6Q
+=w431
 -----END PGP SIGNATURE-----
