@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Dec 2011; Ulrich Mueller <ulm@gentoo.org> -emacs-common-gentoo-1.3.ebuild,
+  emacs-common-gentoo-9999.ebuild:
+  Moved to Portage tree. Update wording of elog message.
+
   06 Dec 2011; Ulrich Mueller <ulm@gentoo.org> emacs-common-gentoo-1.3.ebuild,
   emacs-common-gentoo-9999.ebuild:
   Get rid of all echo commands because they aren't logged.
